<resources>
    <string name="app_name">SuperMe</string>

    <string name="hello_world">Hello World!</string>

    <array name="menu_items">
        <item>Home</item>
        <item>Stories</item>
        <item>Assertive Tools</item>
        <item>Contact</item>
        <item>Info</item>
        <item>Parents</item>
    </array>

    <string name="email_subject_hint">Subject</string>
    <string name="email_body_hint">Message</string>
    <string name="email_send">Send</string>

    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="info_screen_text_1">\"SUPER ME\" has been developed to help you deal with bullying. \nYou don\'t deserve to be bullied.</string>
    <string name="info_screen_text_2">Bullying is when someone is hurting you, over time and on purpose.</string>
    <string name="info_screen_text_3">Remember the \"SUPER ME\" tools &amp; some golden rules:</string>
    <string name="info_screen_text_4">STAND TALL, HAVE GOOD EYE CONTACT AND NEVER HURT THE PERSON BACK.</string>
    <string name="info_screen_text_5">Also remember that you must tell an adult.\nKeep telling until someone helps.\nBullying is not OK</string>
    <string name="info_screen_text_6">Last year 14,632 children in Ireland looked for help to deal with bullying. You are not alone.</string>

    <string name="parents_screen_text_1">\"SuperMe\" against bullying.</string>
    <string name="parents_screen_text_2">SuperMe and SuperMiss are truly self-empowered characters designed to help show you and your children how to deal with different situations of bullying.\nThe stories are taken from real life situations where children have needed to use new skills to stop bullying.</string>
    <string name="parents_screen_text_3">SuperMe is a fun way to learn these skills in real life situations but you as parents, have a critical role in practicing these skills with your children. Try and practice these skills with our children often</string>
    <string name="parents_screen_text_4">The skills or SuperTools you see throughout are taken from the acclaimed ZAP programme, run by Kid-scape UK. The tools when used correctly, can really help children deal with difficult situations.\nThis app is used as a guide.</string>
    <string name="parents_screen_text_5">For more information and further reading please visit</string>
    <string name="parents_screen_text_6">&lt;a href="http://www.mylifesolutions.ie">www.mylifesolutions.ie&lt;/a></string>
    <string name="parents_screen_text_7">Or</string>
    <string name="parents_screen_text_8">&lt;a href="https://www.kidscape.org.uk/">www.kidscape.org.uk&lt;/a></string>

    <string name="button_credits_text">Credits</string>

    <string name="contact_page_text">Please get in touch with the MyLife team if you have any feedback.</string>

    <string name="credits_screen_text_1">\"SUPER ME\"\nis brought to you by MyLife Solutions &amp; The Irish Youth Foundation</string>
    <string name="credits_screen_creative_text">All creative brilliance is thanks to Kizzlefish at Cheatnotes Creative</string>
    <string name="credits_screen_technology_text">All app technology brilliance is brought to you by the learners at iSkill Training Ltd.</string>
    <string name="credits_screen_copyright_text">All design, creative and intellectual property used is copyright of MyLife Solutions.\nStories and strategies are for guidelines only.</string>

</resources>
