<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/splatter_background"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center"
        tools:context="ie.mylifesolutions.superme.info.InfoFragment">

        <ImageView
            android:src="@drawable/parents_text"
            android:layout_width="wrap_content"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/parents_text_1"
            android:text="@string/parents_screen_text_1"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/parents_text_2"
            android:text="@string/parents_screen_text_2"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/parents_text_3"
            android:text="@string/parents_screen_text_3"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/parents_text_4"
            android:text="@string/parents_screen_text_4"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/parents_text_5"
            android:text="@string/parents_screen_text_5"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:linksClickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/parents_text_6"
            android:text="@string/parents_screen_text_6"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColorLink="@android:color/holo_blue_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/parents_text_7"
            android:text="@string/parents_screen_text_7"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/parents_text_8"
            android:text="@string/parents_screen_text_8"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColorLink="@android:color/holo_blue_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>