<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/splatter_background"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:src="@drawable/credits_text"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:src="@drawable/mylifesolutions_logo"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginRight="16dp" />

            <ImageView
                android:src="@drawable/iyf_logo"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginLeft="16dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/credits_text_1"
            android:text="@string/credits_screen_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:columnCount="2"
            android:rowCount="2"
            android:columnOrderPreserved="false"
            android:rowOrderPreserved="false"
            android:useDefaultMargins="false"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">



                <ImageView
                    android:src="@drawable/cheatnotes_logo"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_marginRight="20dp" />

                <TextView
                    android:id="@+id/credits_creative_brilliance"
                    android:text="@string/credits_screen_creative_text"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_width="1dp"
                    android:gravity="center"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_marginRight="20dp" />



                <ImageView
                    android:layout_width="150dp"
                    android:src="@drawable/iskill_logo"
                    android:layout_height="100dp"
                    android:padding="10dp"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:id="@+id/credits_technology_brilliance"
                    android:text="@string/credits_screen_technology_text"
                    android:layout_gravity="fill"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:layout_marginLeft="20dp" />

        </GridLayout>

        <TextView
            android:id="@+id/credits_copyright_text"
            android:text="@string/credits_screen_copyright_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="10dp" />
    </LinearLayout>
</ScrollView>